    <img src="images/trex_logo.png" alt="Smiley face" height="80" width="270"/>
</div>
<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
++++++++++++++

include::trex_ga.asciidoc[]


== TRex release notes ==
endif::backend-docbook[]

ifdef::backend-docbook[]

== TRex release notes  ==
:numbered:

endif::backend-docbook[]

== Release 2.08  ==

* Scapy server for GUI packet crafting, see  link:trex_scapy_rpc_server.html[trex_scapy_rpc_server]
* Client.start Python API supports Core mask  - significantly improve the Stateless performance. TBD- Itay to update the pointer here  
* Upgrade the ./dpdk_setup_ports.py script. It simplifies the way to create first time *optimized* config file (/etc/trex_cfg.yaml)

[source,bash]
----
$sudo ./dpdk_setup_ports.py script -t            # show the list of ports 
$sudo ./dpdk_setup_ports.py  -c  03:00.0 03:00.1 # create optimum /etc/trex_cfg.yaml file 
----

* Basic Cisco VIC functionality works now. Advanced Stateless/Stateful functionality is still not supported.

=== fix issues: ===

* link:http://trex-tgn.cisco.com/youtrack/issue/trex-240[trex-240] 
* link:http://trex-tgn.cisco.com/youtrack/issue/trex-246[trex-246] 

== Release 2.07  ==

* DPDK 16.07 
* ASYNC ZMQ is compressed by default. It improves response time see link:http://trex-tgn.cisco.com/youtrack/issue/trex-232[trex-232] 
** You will need to update the GUI
* Support Ubuntu 16.01 - Stateful serverr is Python 3.0 and Python 3.5 for ZMQ library 
* XL710/X710 low latency was improved -  see link:http://trex-tgn.cisco.com/youtrack/issue/trex-214[trex-214] 
* Support graceful shutdown command 
* Console -  support L1 BPS  using `-m 10bpsl1` see link:http://trex-tgn.cisco.com/youtrack/issue/trex-230[trex-230] 
* Improve TUI refresh time 
* Support IPV6 latency streams (support is available for all interface types except 82599) see link:trex_stateless.html#_tutorial_per_stream_latency_jitter_packet_errors[IPV6 latency]

[IMPORTANT]
=====================================