@@ -9,18 +9,7 @@ The TRex Scapy RPC Server
 :local_web_server_url: csi-wiki-01:8181/trex
 :toclevels: 4
 
-++++
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-75220362-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-++++
+include::trex_ga.asciidoc[]
 
 == Change log
 
@@ -35,9 +24,7 @@ The TRex Scapy RPC Server
 
 == Audience of this document 
 
-Anyone who wants to create,edit and assemble packets for TRex
-
-
+TRex GUI guys
 
 == Scapy RPC Server - Overview
 Scapy Server is implemented following the link:http://www.jsonrpc.org/specification[JSON-RPC 2.0 specification], +
@@ -45,7 +32,6 @@ Therefore, requests and replies follow the JSON-RPC 2.0 spec. +
 The server operates on a Request-Response basis *over ZMQ*, and does not support batched commands handling. +
 
 Read more about ZMQ link:http://zguide.zeromq.org/page:all[here]
-
 
 image::images/Scapy_JSON_rpc_server.png[title="Scapy JSON RPC Server",align="left",width=800, link="images/Scapy_JSON_rpc_server.png"]
 
@@ -78,7 +64,7 @@ Has the following structure: +
 
 (field name, field type, default value) +
 
-[example]
+.Example
 ====
 *Example:* +
 this is the 'dst' field for the 'Ether' protocol
@@ -99,7 +85,7 @@ Has the following structure: +
 [field offset (within the layer), field size] +
 
 
-[example]
+.Example
 ====
 *Example:* +
 This is the 'src' field for the 'IP' protocol: +
@@ -117,7 +103,7 @@ Has the following structure: +
  +
 
 
-[example]
+.Example
 ====
 *Example:* +
 This is the Offsets Dictionary for the IP layer: +
@@ -154,7 +140,7 @@ Each entry in this data base has the following format: +
 'Protocol Name' : 'Protocol Field Description' +
  +
 
-[example]
+.Example
 ====
 *Example*: +
 [source,bash]
